add cloudflareddns chart

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,37 +1,38 @@
-#ENC[AES256_GCM,data:+QRJY8Sa37MTcziQDIIhObKbYdRPGiHfGpNNhhkEUaKyEIEcwyL75kh8aK+6M2wIEtJdFUA8TP6JbSy2QWjJwHA=,iv:GnAirDBDVi0gDXAcuOfZizgiK0Wa9fc3ZAavOZSJ2FM=,tag:vs43XwYx6fcCXD7PKMOfYg==,type:comment]
-#ENC[AES256_GCM,data:uQ3vlilq/gN1xtzenCD89X+Y1oKiayXn9inE4v8Cg/JGMvg8EtsNBoRvFAs=,iv:58BxCkiA0udWIfrSzSk+n6iVhahGJDZJmeukdnTGlmQ=,tag:5+Vi2yFy8qL95IT1286rYA==,type:comment]
-VIP: ENC[AES256_GCM,data:jKfsj6eENNn+svJCwQ==,iv:yc3r0vxvrvLxsFkN76+rSMC/8HKMQkFkNcxsKCeBaJ0=,tag:UBNcWyZo6bxBYxthY4xvRA==,type:str]
-#ENC[AES256_GCM,data:xRTndinCiGDovFTJLWSRqvPU6WrO4ZWVDw2h,iv:dBi24Ttyur9mKHHQbh1ublcf6hV63hoeW7XzwhKlz+U=,tag:PdPo60RLxnAdrQZG0gMEDw==,type:comment]
-#ENC[AES256_GCM,data:20VBmKYuxrIRoq51jsMpRakg/027HFXdItpdqqHvSEj20EEkjiIV2CiLeUPAaqucETr7DLEVtyZk8Kqe674/IeMwtRNG34YAROQ6qJq11sogM6oREHOQXVk=,iv:HQWeznp/87RC2uNlP3iffDBTTFQDZ6VzbVmKc4j4PE0=,tag:UgwzjSQsYVDf5+fWsc3PPg==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:u3a5gNGsLeP5Uv+Er4I=,iv:PGK17wRxF6OmqIIhSPyctJRdIcHI/h4fZdy4KAHHVmE=,tag:wMo93wVAnt5nOfuSgm8xJQ==,type:str]
-#ENC[AES256_GCM,data:rkD3EyXbezwOENpm/pX/zppQd9FZ4TbbcoSpmxv4xL+wiA==,iv:cvUhX1vwLhL7gDvkH3mgYfQMHhUKr4Mj3meSBquNmkE=,tag:4Cgi6H19q3Ii2A1ahsXL3A==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:jr6OcoM5RI/D5XCwHA==,iv:Pw1NRKGxh+VNzIJitpVGvetDfrT54urvKKWpGw7Cj70=,tag:X3RpQ1mvBqoXUASJ7DgEyg==,type:str]
-#ENC[AES256_GCM,data:3JQtB2+X3EVXkIAkmeBgGXwX97iq+uhXtSdZSIJN7D8pgHqg7uA+lV7Sj4jFr90=,iv:BomiB9x0l1liB9tkr9hcrFmr25MML5ywgIOs4l4cy0w=,tag:++xteC8yuwhTZklnG8NUsQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:sIQxp3mtGXnh2zTmLDFstDqZ63m9vGjHrvZju7x4EQ==,iv:9mYSXdi4gpxHzkPFeNn7SaZZmV9/NyZvBmfyLF6rpQs=,tag:UhQP1xC77+rKps2RvIc1Ew==,type:str]
-#ENC[AES256_GCM,data:Yaffxv1vOz2ft1HcR0zHFpFlFqUfs1WW9qatU1Tou1M6cIPdvIYoDv7BymUQOzmOjYA7qiUVDVPhPo6zr2YvPQir54OaxOgySOeWT/s/KUL26g==,iv:+cUJ0fqXH8fvsfQ1jvLqTLtNnK+2GkK2cuN4zONZZFQ=,tag:TEJyBaiDD+9aIuaG0nETHw==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:UZ3ojWWx3atMRuseGSu+,iv:knxeN895M9SzSDCApHacgenyFGfQc2v2LDFj2KpO1rI=,tag:Adz7B+U0/1c08venCSDQzw==,type:str]
-#ENC[AES256_GCM,data:VP+nxr+JM2iy1WzTqEyfEtyBei52CHC3qJKcLSIgaWUB,iv:C36RkQEURh0SvDmZKt1+c6pEwE198ZWfc3xjVbVwi2M=,tag:5pnYfvoWcP+8lyfAFcmf9g==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:xa4s6WwY8uDOvG3yLqlE,iv:bp1oVMkCJR4Jxl5dJUuPsyJMCb0EaMqBzWkK1INjMNw=,tag:3/eHAvokynlSMMdweNiHRg==,type:str]
-#ENC[AES256_GCM,data:HJD1DQAzIZADSCbM8/JAkgMg+hkDHf9gjS0bvVaouTG+FoR2sX8MUZx2LYEoWB4Q0wQtGM2mNobh1YLXmhhbsWaEBdJVfMN4eA0U2O+LklI=,iv:OINISwSo0c5CaI8x3YXY/Jh8SbYgdDNuSHXhT4SJR1U=,tag:AFMxlKddtWFSwccgvatCMA==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:nncE8PFIl7fU4BWjWSpl,iv:zQ2l7rSY/nTt+YU1or+RR/PH30ux3FQ7Ib3upxz87uQ=,tag:rgJJAHA8UMliH18nkJchbQ==,type:str]
-#ENC[AES256_GCM,data:RpW0SJLHcVZlpZRXRqYh/6sVxJ3RqixOfaX5yEYKmgjm//4t/JH3N3j8zP86qHaZ9auKm3gg3yDQ4mUxLQiSM2BbAW3GC1+jd2aZIchGFxwZnySrKzMS,iv:kXSgB5pR2w7f6m56L73X8ZY966MIgNTvWDHaiyOTg/s=,tag:Cir485Y7OpgnMKhKBCwdWg==,type:comment]
-#ENC[AES256_GCM,data:FU7rpzLYPwmy9TeiSFTfuO8bL8IKk32GrNEatcTlA9FJXNs9O3lvfnzBxnrszE/Zwtwtep0SeSVwAes87K3rOVoTX/waxIdImZoKG7XEfscb40+MOJh3v37gfIcrrri7V0kCB97OK+UHbIKOl/XHEACGTFfB3FJBmtEM3w==,iv:Dme9pZBD6luB7W/tHdsgvSa0MwG2mytmImo9bz2XrT0=,tag:gt5tvnwO4puZ8CFLFBuuqA==,type:comment]
-#ENC[AES256_GCM,data:HtEA55pc1W3WyR0e+ZWBhA5Z++sT+w6dvG1ZoYX3MAM/LR4FhtC0OImTuBr3T6rz7a0/S3cQJnHaClC1w5dCthGQA4QQ0KXZopDxsFSq3Ww=,iv:knpee+jCI0z0E5/VrFCBw8kf0AHuZlW8xz5H4YbmqAE=,tag:kdwRXndY8cL+uWTwnQAohw==,type:comment]
-#ENC[AES256_GCM,data:fr1Fgr+HlF9Tr8hCFvB0Is7YmPXSK9gW30HQW+ipmEJIax4m5XFvR9qj/fWkFnt/9JifnezK,iv:/CbYh87rfg5k7eWG9RWKOHIoWHdO/x++CggYIcWGtN4=,tag:bRYTVRWEz+z3fk78oERUOA==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:EwykXrPBv/NV6A8O,iv:Y61Vtjloe8P0h4C1nLsoQyZV00Gx0/OkOAtrX+l6cPs=,tag:j74BolAEOrB8pB94TZIlBw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:zQxtpikbBThJExriGyEty2Y=,iv:6CgNhRRhIKW9PHam6feKoz6nbAl9rNJkZPuNfNcaPTM=,tag:nI3TWNY5TNwT2J9S3caPXw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:iirtUbtRNMczrRY+9E1HPWYZJ7DG6rpB+y8ApHbIHZL9V+qSYL2nHA==,iv:7+vRjJ7olsmR8FOz0SreJpALlFFJd/+qbw8bKQPYKvY=,tag:Kl2y2OkYprf7UGN3eNDaCg==,type:str]
-#ENC[AES256_GCM,data:c4NKKSHgoVASZfQ3P6NcYAUOZkTrV5go3IczHHE364C7Yk5CeDuKU8X+k5ibpZyUBYwX0CdFXQk=,iv:13IdfpbxugjeXA+5PR5hqMGZr17VT4LPZVKiyc2wp3s=,tag:s+zmHzPteKzDGHPxNkG56w==,type:comment]
-#ENC[AES256_GCM,data:Qpj4Uut35kZEKgg23VUK4hewG+Kd3TmxDg==,iv:t/9gilWHTwSxMKO8hjmfi0pAYVpsShrtMZPZAEfoDp4=,tag:sR+26nQxP88wLut8k1w8QA==,type:comment]
-#ENC[AES256_GCM,data:aiNDmkwy7y3+UDVayPAPPPdtL9xYmFFXjeeR0RN2wwEy9YVeG9vbq3BcYd1vdgqCNddamgRuLzKWXDC7am01bXw2cmyjYC/2g62jMCY=,iv:GG5743srcvS0ZZprt0tsiJLhNq8/m1oKy/dt+nAzBzM=,tag:7eatjsr56xUqewS02XuLkQ==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:amHA4Y8OJDhN+TzpNXvw14bpsgPgPIrb+DSAUXj18zHhbhcoCBFwmIhYt/Yj1I8z,iv:J3GXGS7fa31Ayn2g6S5fPVPSuBNuqivs7rEJx+LHUbA=,tag:brCDrhFGHTtrNL217Q+qIA==,type:str]
-#ENC[AES256_GCM,data:+D3nrTmNbRlL4Kh2nupmt509FN5ZVyFBsJxLfajwacgnTQwZb4F6wh+Sdu1YCTTZIG1mNmjvjFq6CepRBaElpTdL2UjDAKA=,iv:VLMxgSzYEEAnp4AKyc3ku2oQ/u5tRV8Z0tvoc6rlvrs=,tag:xQcVd1lrAQ+WrrN5JtNh3Q==,type:comment]
-#ENC[AES256_GCM,data:azA2FTHJe4Yc+PS5or6vHmM6lW5jhyUzol6SA9WwX1m1VoczmfN6XrhpCr2nj4teMmT74S3W,iv:w/2IMqp9+7BiGWzeALsHA2uPGPwqDjo9oc1I2Vlhtos=,tag:3CX4BlEYAGd9ltbIOV9wlQ==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:9MhfFkQoTw==,iv:CQiqqe7ktP2bNkXxls1lGaFFflQXbByhopmqLAkaaTU=,tag:5juwT1rLFXhePT9GptLq2w==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:CDkWkraz/zP/lnyu4X2apMeiYU4=,iv:4WdzbOf9wDwWqkiWKu0l9dgVAc4XKJhcUb4RFm3T0R8=,tag:Bwh/CoV7ubMKcZOL0GmaQg==,type:str]
-#ENC[AES256_GCM,data:afEHDtt+Borr1yrnDbE=,iv:c7DN5RmyDz1xZG9g+eATaL94caEikABMqH8Uv6k7A0U=,tag:OUXv7LGgzjkPu1B0vd9dvQ==,type:comment]
-PODNET: ENC[AES256_GCM,data:I+bH5qNqTS6Mq5tCWw==,iv:NBPnkWhPYMzPM0+w/dh68EqTnA8kl1Y+NeDRAuWm8s4=,tag:CPb3ES2mAucSWqDlZezIgQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:NBAJ0rJ30M2a7dPppg==,iv:1/X+MYs4BrBOLNBzqOdxOaoB8EJUEpsPbdDnmjr85+E=,tag:riQNT1WAVNQcjN8xzwMZrw==,type:str]
+#ENC[AES256_GCM,data:kB7bm9kWlxEQbNozTRE4lTFXlWXyYhQhMT8yYmJ6Ll/0M+kdK+D0w+IDfaryBdifkj9AJhMbuoGqgVWt6ZZME64=,iv:A+s/3lBuQQ+gOA66JkhFgqZt9Gnyp1WbQKnXq8qrtgg=,tag:Y3p0UmPK0bfuxtNr/NIeFA==,type:comment]
+#ENC[AES256_GCM,data:ZqX2hQAS/skvkDkPNnnB3XXmWSZOlAD+LXIqGJES9WubST44zgPfUwosGgE=,iv:UDhikd8Trn6w7PE3gEfZNJ9ZebkZyGYU6fZHAgl9Bsk=,tag:yrRYeke5H3f8RVvV6CzI+g==,type:comment]
+VIP: ENC[AES256_GCM,data:YZHsDbD0GiavvljF/Q==,iv:qjhZFyYXYgRkRqEiDbG/GEcZmrZuC+wocc+Q0bN33m8=,tag:71854ZUniGfH9zC/Kzbcew==,type:str]
+#ENC[AES256_GCM,data:VPVr9JMFespEmdEWs463G143+QlFhWe7EGAf,iv:2IR7basPTlrT9KKZZEC7iNKfEoyVMpZZqW/OOpLVRvE=,tag:g99HzoVuEzYokpzkqShqow==,type:comment]
+#ENC[AES256_GCM,data:JTDce2DWZRMT5UjNEnmTe1AEADu4D62BsnypKCxr5fDR/bN1Z3v57DfnApmOm2n6vAHZlzKt+vMi+yFX+Sc7eMrqE3CaDWYlEdOY96vMIb9AoqnASxpsRCA=,iv:c5025Jpip83PiAUrVT4GH0VdBY/zXKDMnjrT2NEQtXM=,tag:w39poMtbBDlAykDNX/bjhQ==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:+essnMZRbVacRpzel4U=,iv:vuxP9eS/RcDQr/FHWF/Tx5qWVV/BFCIYWE5iMxOryXw=,tag:s6p4DIEX42n9FnbbBFD7zw==,type:str]
+#ENC[AES256_GCM,data:cqr3rJjr3SfvCdfWCxVN9sQ6cSpxvQQQYeUnfjqotBc79Q==,iv:TTIY9+Cjbz6PG0cX3fHIxEBtEpCC+OtjjFaaAd1yltU=,tag:ZGMyrOiTv55JmHVRWD5Kdw==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:yWumvIOICnrwqw0SVA==,iv:OGFc7FXNJPPcdw0Yjd+BGh076etKOKYHzBSfCe/Lvng=,tag:V4wPRVGOGCxxvgHCXixB0A==,type:str]
+#ENC[AES256_GCM,data:/kIQ9bgVe+KaKbv1djMtZlFt1LYNm4HRL4gz+qQQQJwIriEgQyy4EdKyF7gx8vQ=,iv:Ztxj/F965FOB7dbqVDeUOwehPZkqX4GAoR8npf/D6l0=,tag:NaE2qWhMJV+YTKC5ofJ56g==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:WV37OtL1rdm08bQxwRn2M9+/WFFJrGkhdxw0Xidy/A==,iv:aRt68Tn2lUsVzc1+noC1117DQ5xJKoyOkkZewI+iGS0=,tag:FVwwd+bPYPUwhX3vpC95zQ==,type:str]
+#ENC[AES256_GCM,data:Rfl825f0vAYBg67qNDvg/sFbSlmWIMUymW1nMMqmGrp3XzDvmIyOVtnpKoEzqAhFTwDd2mMpuO6bfZqI+wGZS/UOOWg/0Q23zeBuRTzSOH2dnQ==,iv:gEl66713NLLRJQ/9AVp5WGTaSQQD3Lk6FhcWxLMfc+8=,tag:Y1JKS5/mtb0yFubzEBo2mQ==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:2nUkhnn3x1lEr2NoLwJe,iv:aGFd2+2OZSUSeTkUMeCzUuAN6jffrMcY75Et4W11iIM=,tag:Jk9sX4QHGMiTtyy6o/LKxg==,type:str]
+#ENC[AES256_GCM,data:PdiCgbxRlQmoQVcenlso8pFtXHun2oZgDgw9UkpeTz7W,iv:60PeaxxlzxOZDPdqykkx07O2B0SUDUUFWfjaltaSIuM=,tag:hgGHmnYho2nmNMqyop/eMQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:ZoGxSJZx6wuEhZPlMrBe,iv:lOwWFmYwTH0h4j5oJYhQCoTQWBItHg6qqg8d2gO8LXU=,tag:cFyHdqDf21BTuXVRE8gciw==,type:str]
+#ENC[AES256_GCM,data:ae/o26eJOz6bwqu/7Y6t71kLDZdFjn34k8cIEn4ol3i0tc3iWEwvvQu9Ht7X79+S8KM+USyTpK6Vfz1B3CIQqPiqhGb57srGKGpdA5r0UlQ=,iv:MdWSq/kTCM1SHdwW3WXAuF8a4J4cLDw05jsOEa4+ObI=,tag:/ICVkskN0kMBVYfZLgA/SQ==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:72XczS9MnO9+v2VVYzqm,iv:9bm6UBUE+xygM6TWREPY1UGx0mkRrlI0x2CSuSKfxBk=,tag:WoHriHg8xkABYbYxwgIiKQ==,type:str]
+#ENC[AES256_GCM,data:PW/75e8IhUUCQs/rxkUqtOMIapdoJUymMn3O5NtqoL5UMU8V3ZMNngp+SuuAesAkURxUsReZX103YYLF9QApSjo4c2Go1KpC96uuBmGMeusPVANde8IL,iv:S+Xof/fR0FP233+pfTfBosZEWMihXMcK/xSS4iEcOAY=,tag:0V5nqgfMbGcDhnTvYZJCTw==,type:comment]
+#ENC[AES256_GCM,data:IdRCz3nO+nkWjLPeoIAKqYKyethuew1uMl9xKvd0Xi+TGirggMmxSuWKnvRd7FWe/v9LQ/Cq1weo+E+IWNQdRbUBmRcxWmy05oIj/wOVWgQwwtwk3uUHMfF5Yse6EdZ73o//h2tOc6ZRx4tbIcJwuZbEFmAqxN7lxGDRyA==,iv:sd45lRFOp6fVYAFLCKJ02POMUWyfwsWyWIv3/K7jB00=,tag:0xg89d0mrxLrgpbPgPB1xg==,type:comment]
+#ENC[AES256_GCM,data:KqAOoMtK/DjFfKWRxk7okWCkVQkVvJSvSfZwsyZiVi/Gd3zGvYw2LNUFeAaZlYtJ3l1JX5n23BAUF+VoftXPzkAE+Ts7/ZtIU31L1gmgz+c=,iv:z35/6yPXEDQ2pWGz4RA4AdjvR6vV0m77fpDYj4XpYgc=,tag:nUc5KmERGUMEHi7z49oD8g==,type:comment]
+#ENC[AES256_GCM,data:MJq8xFB5OHei+60hz++muV1JVkDiTQEYV/ZrVTOVHbvyVghe/cOJjHqxNKqJuXwkzD1RT9l/,iv:BzUMMqnOq0EWRtmnzJzEtlc/WFe+IDa0Cz0XGLBALnU=,tag:1JtFXWPOacn98kVHV4qGDw==,type:comment]
+DDNS_URL: ENC[AES256_GCM,data:Ypka1DK/b3EKEPU98y8=,iv:ppYPX39spGIRX7oR0YExWS7JAkw1lOB+Jgx4a+J2dWI=,tag:HBxsTRKBsR73Acf4sfjF4A==,type:str]
+DOMAIN_0: ENC[AES256_GCM,data:38ZKFWutI/QAsT1K,iv:sw69pZwr6Fi6mwZEgbnFlq8RVrSGteQtY/56ilHkHvg=,tag:K5yLwP48mxoggqFe5kGVww==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:MYVM/o1YSY9z+t1K0fQA4Bs=,iv:aKOiyWzjnyO74NalTNnkr46ft/YTb615vCVMNk7oFuI=,tag:wOtS7dd5oDcAnNrJuSvlpw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:I9mnPHyPi38LvDDwSt25XrvQOttxIw4Tmylw6TyZeuOn7Xtp4T6Hug==,iv:vCXo3t63KGfr1MfEGCCAVcFwotD1uBJN8Uxn6PByEy8=,tag:zgXHFSCBpsL3PAMxZzSHSg==,type:str]
+#ENC[AES256_GCM,data:tfkucCjH60cQtT7QBlgepc5Je5tvUwWuWPWZ+XzDGDs7Row1UvDlTBbY8bXeSEdozTsEkPAW5Do=,iv:3vT1BwanWbyS6Ru6rKel+y7bMTx3twzRPViYy5Vkn1U=,tag:bwrDEOvYg6ohRJiOZzepAg==,type:comment]
+#ENC[AES256_GCM,data:uQfqnVTX5Msnkcxm1nKTdHrcSJGS8OKvFw==,iv:65nrofdXMQjbo1l8Gb4kUr616bOWmgJl2YVc1cBTySI=,tag:cYXy5corKESzywC01hhaig==,type:comment]
+#ENC[AES256_GCM,data:o1sdZERihg+4GP0/PnQ0ojSMCiWmD5ArlrGIuign6l1Wc0F1H4y6tpJA81NpsmzsdAhbOQQnH6kFFylJ1+8cWuh8Q66e0y4AAsvokd0=,iv:U9XfHnWyoYJXqAF+DgXCtaoz+VyXg9y+ep/HsQkVrvQ=,tag:dHcMo3Hq5nI+CVza+yD+Dg==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:6AtYPbyQtL4Fen4HFyI6lOaOH7LYR+uZPbS/cjPji+v9Ebh3AAS8tPFaNJPflg4V,iv:J4wWwdmZrFnBNxiszn0ScQoZkRiOuZ5wRdAUjwhGmW0=,tag:abmWTc4lqOK3BVXHTwe/IA==,type:str]
+#ENC[AES256_GCM,data:iGdmgZLfM34Zs2giEoTRtwdVjZZcBvuY1EJqYuDA4etQ5FlVSanUArRtES1u3QZPmbYyb3aEqheunjApXYBsp7LVFFdh91I=,iv:0URv6s4dgDlravjoqFJSE0egnSnvZRGanO3KnTmb/eE=,tag:K0lP9WXdwWteD8R/nJ29gQ==,type:comment]
+#ENC[AES256_GCM,data:xzVb3NdoTEAJbVXEfVq5IznSKJ1cg2P3YcsxgvaZodnVEMVfIEn6DQxWOBECH+uR7lvnvILM,iv:qr2v6xgvwzLXKlNyRiMXlCpXicUQ/huFBijexW1zoik=,tag:aQABGrPjp8dVu1bAnJyvEQ==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:kRVKDROumw==,iv:JOau/1kM0DsZSzytwIC8u77qHb1l4a2r2Hi9XbrIrBY=,tag:AFXwTsQSaP8RQ/q/ydvbNA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Ie6dE0a0rt3byyoDbYAFRhE9baU=,iv:/n5JF6QPe7xbaRPZC8FIKiekC8vZNiETGXvp+sWulEk=,tag:zntL7XGxjxjMH9pGdEfqoQ==,type:str]
+#ENC[AES256_GCM,data:UUrohq70tWbOX2/sqLQ=,iv:j6nIXaII6g05HsJmgWIc+dvvnXDtzhA3Frer4jEmCfc=,tag:xc75DBGdpW0zROXwekFb6A==,type:comment]
+PODNET: ENC[AES256_GCM,data:aMJ16fYUGN3wt3jckw==,iv:KbHZI0eWzFsdP9amaB2E3ybS/nn7l1pP74EQ7oXESq4=,tag:1Ilrh/BYMMF/0jRPxs30/w==,type:str]
+SVCNET: ENC[AES256_GCM,data:4ceQBkc5bDvWIJMsGA==,iv:FAwhi07yjdiy2nWVrNTHAlb0+fA/SGLOHWPe32Eq5vk=,tag:8ZHErYMemAYa10hOf6Ot7A==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -42,13 +43,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByTlNzRm9pWDZkSmoxU0Rp
-            V29udmhWZGRKMERVdFlvQkV6eHFKNEpxb2w4ClljTTQzbXRDbTJ3L2tOVSszZCs3
-            THBxb2cyZTh0WU4zbkNleVI5ZHpvQzQKLS0tIHc5N2NiL24ycnpUL3g3bEEvZ0pY
-            SWFpK0NWWHZIeHJmdVR4eXRxK1FuU00K7ANwWcqrizT7l2qBanbwAmq7ilrXawZD
-            GiVdkdP6eQ7eGeZSJhxYNFGo4EAA1lj2Ek6Aj7/4/EPT0Uo9YFXP6A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuUCs5dWs1cm56R2g2WDNI
+            SXZqTnlObEJleXBzdXpVRXM4WDZPbHhmYW5RCktaMFhwbzJ4SFhmbmZrcnlRNHVY
+            MzFUeHRpN05ta0Uza1QxaVBoM0dLczgKLS0tIHFUcENQSG9EcVdZOEJSamtoTCsv
+            SXpuUFN1Wms5TVJXSDVsTVVKTG9QQkUKfUjp+lDPEMQPOGsXdRu2THG3hQpp5zWM
+            N9vHWCUfXATCme5qQY79WJB6p+pm/MJN1eksmxZPMeqMM22CmDd1qA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-22T18:37:11Z"
-    mac: ENC[AES256_GCM,data:mXip+HB2nIss6RgTrzTRLiLKWKyR3YJUEI4it9yclXie8rA3wxsrJoyVg4QdoXv9Cjmp+IPJ0WwZT1U6AfDjqm/pwbfHVHiq2vT9G9ENZLnhbBdLFLuVhhQoQnKEVukva0Xf5Vt3jC/oYmWP7Z51uaBDHcGTqcx1eGIke/gVlyA=,iv:untE8CwcJ1vnVIuu8DZVRaIStSi9/8XwFMB4PN0Pqas=,tag:6xp1tJuplv2iwkJ82WsiTg==,type:str]
+    lastmodified: "2024-12-25T15:40:22Z"
+    mac: ENC[AES256_GCM,data:w083li8TKNRQTVyMXSyuywSxz8g8TddVcfT8Dmr3h8Tx0+TWd1fd9HGi//8L6kxIul/nQ8HRgBR51w9rRfQOzhC3iFT43QE06wvCJWcW3iMC+3psXWbKAcd39RDbrkW0jEbjOhk9EuCb/SIQdYPdOgDUrAbuho1T9qGZuMLTYco=,iv:5FKmgAoPqW58fFnodz146a9yJlwtNLktDfycwJbHHtA=,tag:cvydXIJDAndp2dkS/T0VZQ==,type:str]
     pgp: []
     version: 3.9.1
