--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,41 +4,42 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:/xMDQ/PZkq0FC2aXhfptvWmmbN2E/zKlH9SJx5Oub/Q8Lqb0TaE7iqTFxdBh9Le2bU07J2MA1DslSpe1zojy/KA=,iv:mzbqHcwKJq/FdzppkKOh0ebdcffegTfmMr0rg1x53go=,tag:3eah2Xt85JLBI0sK9igAmw==,type:comment]
-    #ENC[AES256_GCM,data:1IIWUBUC5Q4O2P1LyYUyDpU1dF8NdmvdTrSGc4KaFsDw/ULMbJ0bFvqgogI=,iv:MTP12yLe1uvURFXgybVbROW56Ov4/yPbDKvbrCfBz5I=,tag:oMJjehBxkwten9RnOTRWPA==,type:comment]
-    VIP: ENC[AES256_GCM,data:AET/FFn4Minig1pJzQ==,iv:No1fgicMTnSVnn5ixlJ3Tq0TUAtgkihBH9ExAeMN9ug=,tag:4gVapgTLhxFM2y1dP+qRsg==,type:str]
-    #ENC[AES256_GCM,data:qquAlRxxWq7Shfz+AZaqfuE1mYoZXdADZpSg,iv:EP8ZTMGhUq4aEE3tDYmYuOQw0iQ1fTsQZaMRW+KCjQc=,tag:vZQtFnni3KOGF/hJZh3HqA==,type:comment]
-    #ENC[AES256_GCM,data:A5qnXCk5t0nf+z+KmyRKxnBDDO0hwTCglwbZME9i5poPKA8gpcdu/0b+Yx8ejaBCqWt11L+8XHQTIVBqale9Qbob/V85aq6/yFOurm2rVePdicipAwkI9Bk=,iv:nnlOopn9nc1WcOU4CW3ctyIGJ+0GzbV1bfk1kpN+/UA=,tag:iJVQBNBrK5fLZq1Uu0F2cQ==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:GSgL7WiGo+V+XeGm+D4=,iv:H+69T1Uded/8d4jwgHIGSfwLDYHyu5Zl0CdhYV5iOX8=,tag:T0TjTv8NeAE2HyCP9VD/lA==,type:str]
-    #ENC[AES256_GCM,data:c51prlvF5NrUGl2OHCv+gR4gOo+BnNqv/Rr/Dcc5BNuDfg==,iv:KqEWO9m0RXjC+GOnKOM4AmPWpiF41bgBmivdY4evhu8=,tag:fy4mbi0A0uN4DxW2GdDlJA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:wkDsB2QQRwFVG3ShkQ==,iv:uAn2mRjZQ+/0H/fawR32puBEE/Ir2FygKtsk2fuT+rI=,tag:MxRNIMh/O1dlH54m9AGH3Q==,type:str]
-    #ENC[AES256_GCM,data:Gh9O9SHORLlkApt+3XidpiwAJ9aojYDDBc9WGrdzfRq6FBbYO3ZQnqnx/xu70WQ=,iv:Ib9hThMgkTmS//9uV/tl3sowhE5vSc3ITrowHx1xmg4=,tag:dGKlXuXg9KWKH5d1oo818Q==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:HO+VbY8hYvfHk/1s5dIyd9S4dmK4k5OsgWVrpUQlGw==,iv:DFMOU1sxwnccV09mx8bwchcOinbIBYshQ9xvPJ2xOeA=,tag:eFboKRcvB+P15JNlWyNr7w==,type:str]
-    #ENC[AES256_GCM,data:Z8DTx2iUTN+MtXPCZBIYKMLbvfmITUYWTZ8G0Hg49Dsrlacmvtwd/UO8Vv+5zqpV9MddbwSDStcGTr1bVRTA+CiY+7uU7A2A5OPcHAtBDnsvSw==,iv:+tN3sbTBjpWyBSijKd6qWc/VIjv7co/5/ki2PwjUFqk=,tag:VXfTzIhVm3uTKSLPLKjZRA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:Fnaehi9Gp6/NqIQ3GO0Q,iv:LapPANXoKy4vOE1nLM7aRvO0jIiafCbcASyJFr/sKlc=,tag:SrcLky2ydDej22W5upMLPg==,type:str]
-    #ENC[AES256_GCM,data:L5FhSJZBb1Px5IS8sJtiQP59DJT/+1F0acFsv/UYqQjq,iv:28DpqcCoTvEQch1cJMOAIsCgt80vSGk9nRYmjcKUVZI=,tag:N1fSqa6ak/lksE3FZ88IQA==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:zJ2VPPDlz/sO9heXKn58,iv:qEcjzFUVz8nOttDUjPsCxSLq4f7ZLmzeR51LkpqwNq0=,tag:9GTHQy8jz3aZI/a0ehABoA==,type:str]
-    #ENC[AES256_GCM,data:vGGlGOXQ6R/6WRtGrKOSqP8+e1okK/CJer261SF5yJX7c7fTlyApKMv9cC8ek/UZx+5nud81qr4A/SEdEaQKWt77IEorvxDOwESI8Rl6Pfw=,iv:zguKanjF5UbKYzKq7ZIfmqNPH5dfm6wRDJ7rzqXMoIU=,tag:axMNDJqeID46h8TxjBu+Tw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:4fC6cTMep8VU3op+Y/cM,iv:835GSgBe96MVET7h91LhykrGxdxVbAQBaiqd1S1KNgs=,tag:EY8YOxreSLS3CNLLwhvnjw==,type:str]
-    #ENC[AES256_GCM,data:d7ushgQDqAZam5/ldCGeB7mZI/BfIO2lMdOwUWT3TqnabOB+bJu2qcaVj+WvjHKRubYNY28yFi0fJLVCn8Y3sk0CbYltxi8viETVb+vlDzpIFPBTGthS,iv:Gt4ez7AIgIarVo+Yur/E3pRW7vlczqtOh5yhB36bA7Y=,tag:e1pppci5yceuIvN4B6WsHQ==,type:comment]
-    #ENC[AES256_GCM,data:wiXQLugoTBmbmTAx1zSulDhpt/h/mSwucU7ELYpg9kNBK7mqzv+HWBWg+f9NhiOsRWZ0TF4smlYAu2RjJV6eoQS9ZzsqHo2+KqRZkEFOO+G+8ri3VtZD78uZUTydSakL9cv0wSgElo9AyR9gTLgDDdDoGL9D8CjGumQVOQ==,iv:LAsRiYa0jmExo1CkzDODt30ts5rhcgZ7kqUSL7+iVRw=,tag:P5iTybxcH+3r9oNOAxdjmw==,type:comment]
-    #ENC[AES256_GCM,data:7SZGE50DCw6XsZ97EkvZcJDVJTV1mWutsfJJ5L/sElMUxj03amqN34Mlw11YkhHuUOqKm+W7QXUZ8MolhGiEEOsQO5Ie3pW3K3VggwQ7tQA=,iv:TFf6Z046bIsbxI5ejZKlmCF9czSD5g6NOMP22ITWvtQ=,tag:gysl81oWO8+ELIb5A3DyPA==,type:comment]
-    #ENC[AES256_GCM,data:NFokcmdaCdUJENmCORx+R6EGQ9MQbaOlJDFZIN+4fyqVOFpk+1qDQZZbqtnkAxii3YAZpPKg,iv:BXQw6bk4JCpLG2SZzvY+deQVALqzGBcUQA7OUYS3jS8=,tag:fevWYPq7pBUKWWLhgfIWuQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:0mlqsyqshb3grBIt,iv:fF3e2KCjpc05pYK3vG6MSuBb6WpmGtHnXhUmbtj+N9E=,tag:ttAEjyhCY3LavUmeXYY82A==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:YmNEsbHNddL6xzn6/8KGrFA=,iv:KdD7JM0txxIdqAWO2TeZAHwFPF7DR4zs+IGI+ER20y0=,tag:zhqy3P05CaBmeVy/+bYpAQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:2nMHUEh9s5UOZ5rq39BEmsDzg/7pLNa/mojuAo1LzAuFy2XrlmohSg==,iv:8Kj/Lu6uIy910SF7BRKOPdBTN2utxcAPb0SIcDjHE6E=,tag:GC3/GVsxsyln8ui2kZ4KDA==,type:str]
-    #ENC[AES256_GCM,data:oPxizKj8NK9FszIulST7mH8IXYim+SnG5aSOd92e7aasxm/4SCM69KHv3Hg7xBC6YCwzVfkHqHM=,iv:CBZAd2/6IyjJNeXWFftl/7ctv+TwXJ/SUor0KCn6J2g=,tag:C/9PvcSn6qZK73r87zgoNw==,type:comment]
-    #ENC[AES256_GCM,data:NBVRuSZQK/i/sPs+hubK8I/AIhKIp1Wjpw==,iv:Q/Ki7qil6mK5THRjSjVmDH9AsOhzW2fp+i+JfiZTqQM=,tag:o4AKtxS+4Pt/KuXfNuTt8g==,type:comment]
-    #ENC[AES256_GCM,data:K4iauVM02vFGoxHd4PfSdiw4g/Jlks3ulzlVAv9+Mkoix+2DFl4dDQYrHPFjdTK7Kl6rAjr64CEdOYDOR8I9jF00W3nCwOw65QUSuaE=,iv:CsHO6LLS4cagvcxwm+Ur3RmDUfiQ3ECA7+xIJS51Vis=,tag:F4HCy7hJ1MTBjiHPe1hl/w==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:ndsa97i/dgKgZBNIxUqiyU71pR9XWPP0g8JvecT5LcXo0SNp0zy6DQxzcbYHAlzk,iv:qhAQmeG16qJtnQ3g9j34unCM263XJVWh2ae3qKDV8X4=,tag:90WGt7sUYU+ZyvaI2CM5/g==,type:str]
-    #ENC[AES256_GCM,data:nH0bj4FmB3QQm47u+rTKqFc6/HWBwG5aw8LTkSCtpxA7TpXP+R3UfvdExGNxjIoHGGzab47lBW+VqIUMVK9sR5wrQ9Istv0=,iv:H+WpTszA6xFWkVYCgoGUr0U/Y0GCQsBsMJ5PjLBTb6E=,tag:gLXBs2YZHAz1Bf4Z9WmiGg==,type:comment]
-    #ENC[AES256_GCM,data:8V4pACXSQODPHAFAso9z/buCM5PPVBE1Lqp/i/dY/2lG3fFTgASHleumZbTEzbfN7E69eRib,iv:pY/CENUEAnmhpJdPtfRuyGNOUWHxV73x0L1oCmBEt2Y=,tag:z/n8FpLuO2eM4tLPOVQzzw==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:23H1gY4K5g==,iv:NmM7pFCypys0jbWMSyj4CDooZgsfGfyOK6TvODFFAqo=,tag:xOQkfrkoI6tQido5S8jSnw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:8oz2fJGQxyy9dpbymcKG6YQEL5o=,iv:MwupvJIgSUeAtPnCHzEPQxDrWn1I70gZH/Fle6HIyXc=,tag:uaizhCun9TdLu0RCx4wVfA==,type:str]
-    #ENC[AES256_GCM,data:E/xs8J8k7jKE9botdfI=,iv:+dTTxWs722JzjX2Ch+WEbEUjqk2oA6R2Zd64KQCE50o=,tag:KFub1CaP93zonL0DnpKh2g==,type:comment]
-    PODNET: ENC[AES256_GCM,data:zMs1UMiD25CJyxsE6w==,iv:gaX8weyLD4/LtK3t4b9OUPo3vP55GVoSSX7NnNm2cfc=,tag:ulCm5bc6M8VY5HuU695F3Q==,type:str]
-    SVCNET: ENC[AES256_GCM,data:N+zTxAs92M62G8AYuw==,iv:00A1XJ+MxWSUqdvMhEqjGPZreU+yf41yi/0d87CFlWA=,tag:XjRGp5eSkbxrxUnD8oTc7g==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:mXuAvw==,iv:wQTow/17svc2CtvUo2sw2vIwaQA8X/+cO7W/oPyYHvg=,tag:yJn+5QhIC+HWHmk4qA3z+w==,type:str]
+    #ENC[AES256_GCM,data:h4StNLxPIt3/2hdSAYOBlsPSXoZ1hgi81PGmDw4Jn8RXG+PXvJ5/AiQeYMgNGFN2RNhyCx7FC+/eMek45B7eM6Y=,iv:LCmAEpXuDF97Cxra9ADsCPgifiPjb4XQQB8e9AgGRxY=,tag:9j2cvw5v/XedC5O2X+mBhA==,type:comment]
+    #ENC[AES256_GCM,data:tlXxLuYBsFLZ2VJ9Nc7qySIxeGCfkxMjSuLSrpdzH+DDY8T/oDfLLGouGBw=,iv:4vYO6ObZA9gzACJl0MEg7iKny6YnsceKEmia1ybCynQ=,tag:KYQ74VC5/8BfJDXhJQwlnA==,type:comment]
+    VIP: ENC[AES256_GCM,data:YA7JMSTpl7oMF+mu6g==,iv:Og0gVCM1h7q0AgKp5sfwp3TVOzUFpQwkLeMY8bv23XM=,tag:9St3jVNInJFEq89xRUWy3g==,type:str]
+    #ENC[AES256_GCM,data:PBH/GAbz45InI4DGLXg9ChVPYg8nSfZe+k/b,iv:wHDrjCCIL6MoKiQl39kbSqWI7R7wkwICLekLRq21eZg=,tag:iRprnal4dVBMkC/kyyTt3g==,type:comment]
+    #ENC[AES256_GCM,data:JUEaZjhHs73xkTA1PiqqLl7VYpdWmit79BscAHxuTqcIXmBqYpzUl0pPVt/hUM8PucZbg/W323ERHMdVs0+oFOvgClz3uVo3JW4RP2L7jqgd0CDKzo58kCY=,iv:4sOdkYPMT00C0Hm5P5nlK89bXhdWqw5h1gfipiskYvw=,tag:w8lyBOFIloBzfb6aDFxdaA==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:uDOh5cReBb+bzouw1LY=,iv:ktjxLdlOYw3nk2idpAJuJzlYSfjetAi4WCSBiWIEAlA=,tag:pqBPhFI7/QCrGdwytJz83w==,type:str]
+    #ENC[AES256_GCM,data:IwdDhyL2XWWcGCzSwTeG3CaT2ThMh7yX2TqDRKj1eN3euA==,iv:Nd+o/uDW1P5m3+zb3r4o7oXStWr0fupDV5VbbKKVakI=,tag:+nLm60clX31Mz2Y9G7liww==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:neGdfveBeN2DMQkPrQ==,iv:5IRdqyUxub2ZooPKv+1595WWDwfK3M68czAOv8+zqmQ=,tag:zmmskpfLL780KWDPkeUFRA==,type:str]
+    #ENC[AES256_GCM,data:HnWtiCPhIRmO2QEg5YP+QxBpnl+1zio50nnjh/8EnOo0UFS11ttQhqw7+1AO6bM=,iv:SI0MPyItUzP57PsZUD2AES8E/xdqP4vuxlFkG3y/Mtw=,tag:zzrHi4mfWSigAbp/m8HkyA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:Vlp/3lO+/geLgfOGFbHmgZMgKO4ko/BBLG3yQUiKJw==,iv:oeDRvdN/dElnbBzOA67aoVSRMyqIE7uxyi6nrBFtFsI=,tag:88IHaUTAqvHlduFy+VB/rg==,type:str]
+    #ENC[AES256_GCM,data:8yE5w/epMcCpzZfXDINfcTGkpEFMeCOepz8EF/a0sqG3Xn7R8kGtoObtqn0wqOozmh1tgPZb+zNlEVVpYk3LhjE2FC3Gtb7rxnnG5Qr8EgeA6w==,iv:gtbCG88tkg7JpspPTWBz3ABYIA68ytVrYa9174ZeTJQ=,tag:537Nrrf8GMP0Ar4kmoDt6A==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:cLMuGXStD+YKAtx8AUF0,iv:1O8E0o3TddTm+6AVolb6Hyk1AyIJmBHjbcZKob9cCMY=,tag:5Rgjix8vTLisIlCRLIL6lg==,type:str]
+    #ENC[AES256_GCM,data:K4ege9Liw08Kuw1keT7/eLOrIs3vs130d+JgVX2p3VRb,iv:rdgikoEIZr5xUS+A6AvAq1NdGcVnl76ivw7OvUFsEFc=,tag:/QtWneG/WRRCFy17hecl6Q==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:O1RQ1MJ5xrfC/MY7XbF8,iv:u/EramEp01ZWzjDn9Ffnp1Lo8LQakAMcJXhgZLknz2E=,tag:+ky0s0tHu6TE4WEKkwZSYw==,type:str]
+    #ENC[AES256_GCM,data:jDOp/hciBaZaFAIk/1DzHx3iehFhYQT6INC3Ni+9GbIXYvCKyXtyMwWgKO2V9o3VvB0Oeo0lN1R5McKvJooABiGgq1GRjuhPcVLAaGHut08=,iv:TPjoWfQFehU9Z/MERiNROiiQTm0cqw5EVtZuJQjjEds=,tag:iVsgf8PGnwfz3N//u8KI2A==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:9fVYfqEw/FK074rWeZvw,iv:geZ6YGzz+dYbYTk4+mZXLZW8DZmCUVbtEKxw70exPfQ=,tag:szKzXVXOD6wUcQIirISWDA==,type:str]
+    #ENC[AES256_GCM,data:h/++viFUMppNZ58xsigmhOvPJ2x+3hsD7NAINUbToH0SUxqM4/rXUH54Awin2SJUhvs4ijJN3GqrjUX/Pf1QEi60gpve/JxxEi//xdBn2uU+P2gcmH++,iv:4rDW4O3sBVAWUdHiX2layPMiK9L0O+uVGvMEqZl78x8=,tag:4EhnOHsMk1AYH1rJOKzabw==,type:comment]
+    #ENC[AES256_GCM,data:uIO9gkCB6ZocwowInLflSKSrMDbWoVWstW9m0sK4Xz25gPf9PORndTQBsAQ+ucYK6253qpW4M39xBEt7TuSx98XwGx48cO7/9gip4WfKmKrWWJaKQcEOVl/k6FYp1QRIUx1sWZZQ/v6C9vEuonRHWUcLU2ia+pe/Z7XOxg==,iv:PgWzGxaKlz+2PbTtX+aAVTAnoWzXGDZOzqshGuah/Eg=,tag:LknT9J4WfHCsRQbKp7ch/Q==,type:comment]
+    #ENC[AES256_GCM,data:lXVAnWdWTdd5sE04rQP23EIr89hv/5PQCVdbrcp9pzD5TaI99D4chIEJcbOYU/PhUIaJBV3AZZeSAnwwVLlI1GB/9OSGojmsxKoDdw1T/To=,iv:8j2cKNgmByFcyqUkgIvuoV5rrV4/yXfeV+WqdiX2C/4=,tag:OsEEyOWGmHKJQCicC6Iefg==,type:comment]
+    #ENC[AES256_GCM,data:68ggQaQXEI38pD+ckIoHfrd1S6j5QDaeor5xQdmFuG5OnMjp2RFt8hNgiLSXnC4l0Eh6pqxa,iv:HMtdrRevbXCKSvXwBNMaQTTVlklwzWOoa3Nt1Juzppo=,tag:EXcBHSq9I8ozIO/rfWn4RA==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:xoRydR0vHtCwTIBchPM=,iv:WWwgrJfxVZmTJqt2ou/z44mc/fk3390qYEY2kdyfXQY=,tag:zb/AF99N/U39wGcG83tkzg==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:oq7vtu4V9GHfWUiT,iv:r5dG76qzwiHu/lbSwRs6rj6OReo1yNBfBrUs7w1CfTY=,tag:a04HMOLGmCTUgMacU+vTdA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:BnO3grLowiWZN4xWBZRSMmE=,iv:ephgT6Vil8W6odZ3DmAADBcRwm7RMm70uh6YCwVP/lo=,tag:XjtLnbkZDWdkJuSjUheMyQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:2blV4If/kD6AJwGIZHNwZBUrKa890Nw5u2KSHBdpBsLMSoAKFryFog==,iv:jor+PGtRipzsCFnHZVxJiC2R+A4pqeFKAgWEBK+hysE=,tag:Z5z7UPjLYeXeCeDkvjVErg==,type:str]
+    #ENC[AES256_GCM,data:HiSmRDvxll6hx+fuImiFw50ROwntarjm8t982hWP9xcK53sL0mXyb7yrG01MTKitk11kblneLdE=,iv:I4hVLPDg2yLH2w0OXfs9Owk/50Gdrfjer+HSr5uZ7rE=,tag:fs8f19Xaeu8t7V1BGe1/Gg==,type:comment]
+    #ENC[AES256_GCM,data:BN0AmyVXbjLLtUcgsNiHVfBoaPdoth/9fg==,iv:Fl5+Jn0JTaU5B1kxU8Fj26Ewshl6V7shKymUuDpYRtI=,tag:9NX6r9jOmHcWDxko7LgFtQ==,type:comment]
+    #ENC[AES256_GCM,data:8xh/VuQfqFUj4pLFKP3vYVBHbmQjKrtrLxcTONG1tfMo7fZ1xlvtIO4dtByBEVXp94OILxfXoNEb5j23meFO697BxALfMwx0FKXJmxA=,iv:X83hKhwh6ze8R9bx2YyF5o0/3l5waXA60KXkCzAYjsg=,tag:QPNd+XtiM3yL6hnQM1hFbg==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:NuCH8X+s1XffGM4jVBhuKW678csAMNOWBtFz77HSyBcviIOv1PHNq6j2wpYtLEBx,iv:xxtguktO06Rjumo1mXUVsvBiHooquGArEAV3QZAilMc=,tag:AhfQa7xUNCRCixGL6YUlKg==,type:str]
+    #ENC[AES256_GCM,data:c3lTOH24SJUdsssDf5Zrx/9t6OpjXPpTuOIwqiDkJkHnF0zF5t/rK8vDe2/XMwpaN0+PQ72YeVh55CIx4yBDDjDNuLPcKFE=,iv:XdE5M2q8ugsmsDktSqG3W9LMtvejGgIuj3bk6AwAW6Q=,tag:NXwAViTdFf0/sMtt5KeqxQ==,type:comment]
+    #ENC[AES256_GCM,data:774HgFPcpNSGT2UuBRJGlMqkyRg3U8/vux419p/0MmgI3CQLI7hRbgl+SdxM+Grrf3XLRPLm,iv:lBn55XO92SBexfWNuXabHr0sCDG3Cor8GerMancB6n8=,tag:jdGSqBqQmGiy8RNOjn+Y+g==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:2EibEBeV9Q==,iv:UjFnS8+3pcNqpcmIfb+wMsCKxFhn+hyADxsIv9xkiYU=,tag:tisMh8BimMG8PLxNT+7rwA==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:SHmVrlMwv2jZNA5qWOuUGcuNGXc=,iv:LuAmO/gTBYeFlXBstseIdAeri7j6L6gCfwPd+xy52mA=,tag:geng8U2Dd9Zy1E2IOdnQqQ==,type:str]
+    #ENC[AES256_GCM,data:nmNfp0bhHaEmNSdevtE=,iv:Wpnr2R5ZkSQPC4arMLtAZGL2Ai2VDjxOft64BmU305U=,tag:4bvW0gDp3A6ySRWpl9JvoA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:zTKJrbxo9K0Kd+B4qw==,iv:uwsE0z+vnepfQlZk6vtx03J7GB1wLKlfLp1YK83fccU=,tag:cHYcWLdS0RwjNRlsfca/Qg==,type:str]
+    SVCNET: ENC[AES256_GCM,data:RzdZ3TNDnnUqhIncqg==,iv:0e5+mS6lsf70kaYgRMJpAhmIx/1JhoZomMwLWrWa5ek=,tag:O/HpWzFqsRtuGLVl+o9dFA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:0qWPNA==,iv:AHCQRq9Kl8pw++3D9YMQsnRkUFUbr0N2WOpOIEukRPE=,tag:b9mNWUL5C30aS6U2Qnqiqw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -49,14 +50,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTTXJwNzZXeTFiR1kyM3BW
-            cm1CYU56QVRSSE9zV2M2QXpqTnRJZHJBRmhnClNzUGZPZjlHZU9QOENQZ1JBMjRM
-            cHloUldDTlJVUUZJbUJGbkJ6eTdieXMKLS0tIHVRRG9kSDZZcDNhM044QVNIV2Zs
-            TWNVU2Z3MXNpU1phd1FzU3RlQU5MdFkKeS6/fiJ593Xrr1Z79tpakq8SJdYrmTv5
-            ugYoItFKtX9gRYLqOwxp/CXy6sK5zr6ecWbjboKC+o27XyjGl5GSOA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwallwQ3FybWVaOFdWNm4x
+            YnFETzB1cnFPekpwLzdQMGdVWUNLaFFqalhZCk5aWTZVdXpLUHJaa01hY3VRTkNQ
+            cnQzUndMejJHeHZyREVjV3dKZXlkZWcKLS0tIEVrNU9Mb1lWQU95d096TzNGVGw0
+            MXE5Z3MxUjJSWUdjVXFvK3MwNjRSWGcKAwcxOkUp07CkxwYgblO7DGmR9Pc/hSzm
+            ZHOidc4g9dhuz6Mxzp5EL4nOyMCIwhr3eRsI8U2jkRpsTIpVlHGS7Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-22T18:37:11Z"
-    mac: ENC[AES256_GCM,data:CWVMHHWn7V6vo5o//p8WBU/ud306oHUHT+lwrkLRKRo6o2IDdsWEvhe/fjIRG7Hjz+PDP5K1Fx+JzwKp1k8mGRZDoLQAQfhFAX8HgK2kd2LAL8fla/bmfgtFTbWYeoXrpg1z/hR5BbffFCDVII2F8FSM891yOWytMQyhQ9TY5No=,iv:skiMAy1VIkForQvrNGrh0N5kg0Sj7QRN4QzedSJr/bg=,tag:e2DKCScu7j5UMgVnVWqEbw==,type:str]
+    lastmodified: "2024-12-25T15:40:22Z"
+    mac: ENC[AES256_GCM,data:Nv20ln2j6+RfvcRWME3T/z8FdjaQOsmXfNPOkwh7bf+30MBkU7RGd9TTgFIDvg4yuRMpf3V8XU2kWv2iL8o51SG8dS5+I8zoWWfRfjAFXvdAoL9Xc3r3K56z0laDOTiT2IDp2h8+rnx3PCPuxkk2tR5Hs8Tt3DrLvTYsXaRSyOc=,iv:m7FXWDljAyoZCroIEkRrveB2rBpnCAsiogbkocqxBPo=,tag:iUaF5xHe7IEFYhhP2GN8fg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
